# AION-CR

./: .gitignore  ARCHITECTURE.md  CLAUDE-CONTEXT-MEMORY.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  GITHUB_UPDATE_COMPLETE.md  GLOBAL_REGULATORY_DATABASE_COMPLETE.md  IMPLEMENTATION_COMPLETE.md  MEXICO_LEGAL_FRAMEWORK_COMPLETE.md  NATIVE_INTEGRATION_COMPLETE.md  README.md  REGULATORY_INTEGRATION_COMPLETE.md  aion-server.rs  autonomous_deployment.rs  claude_config.json  deploy.sh  docker-compose.yml  integration_test.rs  integration_test_comprehensive.rs  real_integration_test.rs  start-aion-cr.sh  test-aion-cr.sh
african-legal-frameworks/: algeria_complete_legal_system.rs  angola_complete_legal_system.rs  batch_horn_africa.rs  batch_remaining_africa.rs  batch_west_africa.rs  botswana_complete_legal_system.rs  burkina_faso_complete_legal_system.rs  burundi_complete_legal_system.rs  cameroon_complete_legal_system.rs  car_complete_legal_system.rs  chad_complete_legal_system.rs  drc_complete_legal_system.rs  egypt_complete_legal_system.rs  ethiopia_complete_legal_system.rs  ghana_complete_legal_system.rs  kenya_complete_legal_system.rs  libya_complete_legal_system.rs  madagascar_complete_legal_system.rs  mali_complete_legal_system.rs  morocco_complete_legal_system.rs  mozambique_complete_legal_system.rs  namibia_complete_legal_system.rs  niger_complete_legal_system.rs  nigeria_complete_legal_system.rs  rwanda_complete_legal_system.rs  senegal_complete_legal_system.rs  south_africa_complete_legal_system.rs  tanzania_complete_legal_system.rs  tunisia_complete_legal_system.rs  uganda_complete_legal_system.rs  zambia_complete_legal_system.rs  zimbabwe_complete_legal_system.rs
aion-ai-advanced/: Cargo.toml
aion-ai-advanced/src/: autonomous_agents.rs  gpt_integration.rs  lib.rs  quantum_ml.rs
aion-api/: Cargo.toml
aion-api/src/: enterprise_connectors.rs  handlers.rs  lib.rs  middleware.rs  server.rs
aion-audit/: Cargo.toml
aion-audit/src/: integrity.rs  lib.rs  system.rs  trail.rs
aion-blockchain/: Cargo.toml
aion-blockchain/src/: blockchain.rs  lib.rs
aion-cli/: Cargo.toml
aion-cli/src/: cli.rs  commands.rs  lib.rs  main.rs  utils.rs
aion-compliance/: Cargo.toml
aion-compliance/src/: ai_reasoning_engine.rs  alert_notification_system.rs  assessor.rs  autonomous_agents.rs  comprehensive_legal_library.rs  connectors.rs  dashboard_components.rs  database_manager.rs  dynamic_rules_engine.rs  energy_utilities_library.rs  engine.rs  enterprise_monitoring.rs  environmental_sustainability_library.rs  financial_services_library.rs  frameworks.rs  global_frameworks.rs  granular_legal_database.rs  healthcare_pharmaceutical_library.rs  intellectual_property_library.rs  interactive_query_system.rs  international_trade_customs_library.rs  labor_employment_library.rs  lib.rs  licensing_engine.rs  llm_integration.rs  manufacturing_industrial_library.rs  migrations.rs  monitor.rs  multi_jurisdictional_framework.rs  performance_optimization.rs  predictive_analytics.rs  quantum_cryptography.rs  real_database.rs  real_http_apis.rs  real_ml_models.rs  real_quantum_crypto.rs  real_time_dashboards.rs  real_time_regulatory_monitor.rs  regulatory_integration.rs  regulatory_monitor.rs  (+4 more)
aion-compliance/src/connectors/: aws_connector.rs  azure_connector.rs  mod.rs  servicenow_connector.rs  splunk_connector.rs
aion-conflict/: Cargo.toml
aion-conflict/src/: analyzer.rs  detector.rs  graph.rs  lib.rs  resolver.rs  strategies.rs
aion-core/: Cargo.toml
aion-core/src/: errors.rs  lib.rs  traits.rs  types.rs  utils.rs
aion-db/: Cargo.toml
aion-db/src/: backup.rs  lib.rs  migrations.rs  normative_store.rs  query_engine.rs  repository.rs  schema.rs
aion-filing-generator/: Cargo.toml
aion-filing-generator/src/: lib.rs
aion-filing-generator/src/form_library/: mod.rs
aion-multilingual/: Cargo.toml
aion-multilingual/src/: lib.rs
aion-nlp/: Cargo.toml
aion-nlp/src/: advanced_graph_processor.rs  conflict_ml.rs  knowledge_graph.rs  lib.rs  semantic_analyzer.rs  semantic_engine.rs
aion-normative/: Cargo.toml
aion-normative/src/: analyzer.rs  engine.rs  hierarchy.rs  lib.rs  repository.rs  validator.rs
api-marketplace/: Cargo.toml
api-marketplace/src/: lib.rs
api-marketplace/src/connectors/: mod.rs  registry.rs
arctic-antarctic-frameworks/: antarctic_treaty_system.rs  arctic_territorial_regulations.rs
argentina-legal-framework/: argentina_federal_legal_system.rs
benches/: normative_resolution.rs
brazil-legal-framework/: brazil_federal_legal_system.rs
canada-legal-framework/: canada_federal_legal_system.rs
caribbean-legal-frameworks/: bahamas_complete_legal_system.rs  barbados_complete_legal_system.rs  dominican_republic_complete_legal_system.rs  haiti_complete_legal_system.rs  jamaica_complete_legal_system.rs  trinidad_tobago_complete_legal_system.rs
certifications/: Cargo.toml  README.md  formal_certification_framework.rs
china-legal-framework/: china_national_legal_system.rs
colombia-legal-framework/: colombia_national_legal_system.rs
compliance-libraries/: Cargo.toml
compliance-libraries/financial-services/: fed-regulations.rs
compliance-libraries/healthcare/: fda-cfr-title21.rs
compliance-libraries/src/: lib.rs
compliance-libraries/technology/: gdpr-complete.rs
config/: integration.toml
docs/: ENTERPRISE_CUSTOMER_ONBOARDING.md  ENTERPRISE_PRICING_TIERS.md  ENTERPRISE_SECURITY_CERTIFICATIONS.md  FORTUNE_500_PILOT_PROGRAM.md  README.md  agi_aef_evaluation.md  agi_capabilities.md  ai_benchmark_frameworks_and_training.md  competitive_analysis_legal_ai_benchmarks.md  complex_manual_analysis_guide.md  evaluation_methodology_critique.md  interaction_examples.md  (+2 more)
integration/: Cargo.toml  build.rs  ectus_r_bridge.rs  unified_orchestrator.rs
integration/src/: config.rs  lib.rs  monitoring.rs  protocol.rs  security.rs
security/: Cargo.toml  external-audit-framework.rs
server-workspace/: Cargo.toml
tests/: Cargo.toml  enterprise_testing_framework.rs  integration_tests.rs  main.rs  test_runner.rs
tests/reports/: aion_cr_test_report_demo.txt
(+148 files in other folders)
