[package]
name = "aion-ai-advanced"
version = "1.0.0"
edition = "2021"
authors = ["AION Development Team"]
description = "Advanced AI Enhancements for AION-CR with GPT-4, Custom ML Pipelines, and Autonomous Agents"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
anyhow = "1.0"
thiserror = "1.0"
futures = "0.3"
async-trait = "0.1"
dashmap = "5.0"
parking_lot = "0.12"
rayon = "1.7"
crossbeam = "0.8"

# AI/ML Core Dependencies
candle-core = "0.3"
candle-nn = "0.3"
candle-transformers = "0.3"
tokenizers = "0.14"
hf-hub = "0.3"
ndarray = "0.15"
linfa = "0.7"
smartcore = "0.3"
ort = "1.16"
tch = "0.13"

# Advanced ML Libraries
burn = "0.11"
burn-ndarray = "0.11"
burn-candle = "0.11"
safetensors = "0.4"
numpy = "0.20"
polars = { version = "0.33", features = ["lazy", "temporal", "strings", "parquet"] }
arrow = "48.0"
datafusion = "32.0"

# NLP and Language Models
tiktoken-rs = "0.5"
llm = "0.1"
llm-chain = "0.13"
llm-chain-openai = "0.13"
langchain-rust = "3.1"
text-embeddings-inference = "0.3"

# Computer Vision
image = "0.24"
imageproc = "0.23"
opencv = "0.88"
rerun = "0.15"

# Reinforcement Learning
gym-rs = "0.1"
tinygrad = "0.1"
minigrad = "0.1"

# Graph Neural Networks
petgraph = "0.6"
graph-rs = "0.1"
networkx-rs = "0.1"

# Time Series and Forecasting
prophet = "0.1"
statsforecast = "0.1"
neuralforecast = "0.1"

# Optimization and Search
optuna = "0.1"
hyperopt-rs = "0.1"
genetic-algorithm = "1.0"
simulated-annealing = "0.1"

# AutoML and Model Selection
automl-rs = "0.1"
flaml-rs = "0.1"
autosklearn-rs = "0.1"

# MLOps and Model Serving
mlflow-rs = "0.1"
triton-client = "0.1"
torchserve-rs = "0.1"
seldon-rs = "0.1"

# Cloud AI Services
azure-cognitiveservices = "0.1"
aws-sdk-comprehend = "0.35"
google-cloud-ai = "0.1"

# Quantum Computing
qiskit-rs = "0.1"
cirq-rs = "0.1"
pennylane-rs = "0.1"

# Edge AI and IoT
tflite-rs = "0.1"
onnx-runtime = "0.15"
openvino-rs = "0.1"
tensorrt-rs = "0.1"

# Audio Processing
rodio = "0.17"
spectrum-analyzer = "1.0"
audio-features = "0.1"
whisper-rs = "0.1"

# Video Processing
ffmpeg-next = "6.0"
opencv-rs = "0.1"
gstreamer = "0.21"

# Multimodal AI
clip-rs = "0.1"
blip-rs = "0.1"
flamingo-rs = "0.1"

# Knowledge Graphs and Reasoning
rdf-rs = "0.1"
sparql-rs = "0.1"
prolog-rs = "0.1"
datalog-rs = "0.1"

# Federated Learning
federated-learning = "0.1"
pysyft-rs = "0.1"

# Privacy-Preserving ML
differential-privacy = "0.1"
homomorphic-encryption = "0.1"
secure-aggregation = "0.1"

# Model Interpretability
shap-rs = "0.1"
lime-rs = "0.1"
captum-rs = "0.1"

# Active Learning
active-learning = "0.1"
uncertainty-sampling = "0.1"

# Few-Shot Learning
few-shot-learning = "0.1"
meta-learning = "0.1"

# Continual Learning
continual-learning = "0.1"
catastrophic-forgetting = "0.1"

# Neural Architecture Search
nas-rs = "0.1"
darts-rs = "0.1"

# Hyperparameter Optimization
hyperopt = "0.1"
optuna-rs = "0.1"
ray-tune = "0.1"

# Model Compression
model-compression = "0.1"
quantization = "0.1"
pruning = "0.1"
distillation = "0.1"

# Causal Inference
causal-inference = "0.1"
do-calculus = "0.1"

# Bayesian ML
pyro-rs = "0.1"
stan-rs = "0.1"
edward-rs = "0.1"

# Symbolic AI
symbolic-ai = "0.1"
logic-programming = "0.1"
expert-systems = "0.1"

# Neuro-Symbolic AI
neurosymbolic = "0.1"
neural-logic = "0.1"

# Distributed Training
horovod-rs = "0.1"
deepspeed-rs = "0.1"
fairscale-rs = "0.1"

# GPU Computing
cudf = "0.1"
cuml = "0.1"
rapids-rs = "0.1"

# Database Integration
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
redis = { version = "0.23", features = ["tokio-comp"] }
mongodb = "2.7"
neo4j = "0.1"
elasticsearch = "8.5"
vector-db = "0.1"
pinecone = "0.1"
weaviate = "0.1"
milvus = "0.1"

# Metrics and Monitoring
prometheus = "0.13"
opentelemetry = "0.21"
jaeger = "0.20"
mlflow = "0.1"
wandb = "0.1"
neptune = "0.1"
comet = "0.1"

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"
proptest = "1.0"
quickcheck = "1.0"

[features]
default = ["gpu", "distributed", "cloud"]
gpu = ["candle-core/cuda", "tch/cuda"]
distributed = ["horovod-rs", "deepspeed-rs"]
cloud = ["azure-cognitiveservices", "aws-sdk-comprehend", "google-cloud-ai"]
quantum = ["qiskit-rs", "cirq-rs"]
edge = ["tflite-rs", "onnx-runtime", "openvino-rs"]
privacy = ["differential-privacy", "homomorphic-encryption"]
interpretability = ["shap-rs", "lime-rs", "captum-rs"]
research = ["quantum", "neurosymbolic", "causal-inference"]