[package]
name = "aion-audit"
version = "1.0.0"
edition = "2021"
description = "Audit and verification system for AION-CR"

[dependencies]
aion-core = { path = "../aion-core" }
aion-normative = { path = "../aion-normative" }
aion-compliance = { path = "../aion-compliance" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
tracing = "0.1"
sha2 = "0.10"