[package]
name = "aion-compliance"
version = "1.0.0"
edition = "2021"
description = "Regulatory compliance engine for AION-CR"

[dependencies]
aion-core = { path = "../aion-core" }
aion-normative = { path = "../aion-normative" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
tracing = "0.1"
regex = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
async-trait = "0.1"
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
md5 = "0.7"