[package]
name = "aion-core"
version = "1.0.0"
edition = "2021"
description = "Core framework components for AION-CR"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
tracing = "0.1"
regex = "1.0"
dashmap = "5.0"