[package]
name = "aion-filing-generator"
version = "1.0.0"
edition = "2021"
authors = ["AION-CR Team <team@aion-cr.enterprise.com>"]
description = "AION-CR Automated Regulatory Filing Generator - AI-powered generation of compliance documents and regulatory submissions"
license = "MIT"
repository = "https://github.com/aion-cr/filing-generator"
keywords = ["regulatory", "filing", "compliance", "automation", "ai"]
categories = ["text-processing", "template", "automation"]

[lib]
name = "aion_filing_generator"
path = "src/lib.rs"

[[bin]]
name = "aion-filing-server"
path = "src/bin/server.rs"

[[bin]]
name = "aion-filing-cli"
path = "src/bin/cli.rs"

[dependencies]
# Core async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }

# Web framework and HTTP
axum = { version = "0.7", features = ["json", "headers", "query", "multipart"] }
tower = { version = "0.4", features = ["timeout", "limit", "buffer"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }

# Serialization and data
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
uuid = { version = "1.6", features = ["v4", "fast-rng"] }
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Template engines
handlebars = "5.1"
tera = "1.19"
minijinja = "1.0"
liquid = "0.26"

# Document generation
printpdf = "0.6"
lopdf = "0.32"
wkhtmltopdf = "0.5"

# Office document generation
docx-rs = "0.4"
xlsx_writer = "0.7"
calamine = "0.24"

# Text processing and NLP
regex = "1.10"
fancy-regex = "0.13"
unicode-normalization = "0.1"
unicode-segmentation = "1.10"

# AI and Machine Learning
candle-core = "0.4"
candle-nn = "0.4"
candle-transformers = "0.4"
tokenizers = "0.15"
ort = "2.0"  # ONNX Runtime
tch = "0.14"  # PyTorch bindings

# Natural Language Processing
nlp = "0.6"
rust-bert = "0.21"
whatlang = "0.16"
lingua = "1.6"

# Data validation
validator = { version = "0.17", features = ["derive"] }
jsonschema = "0.17"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }
redis = { version = "0.24", features = ["tokio-comp"] }

# File handling and compression
zip = "0.6"
tar = "0.4"
flate2 = "1.0"
tempfile = "3.8"

# XML and HTML processing
quick-xml = { version = "0.31", features = ["serialize"] }
roxmltree = "0.19"
scraper = "0.19"
html2text = "0.12"

# JSON and data manipulation
jq-rs = "0.4"
gjson = "0.8"

# Configuration
config = "0.14"
dotenvy = "0.15"

# Cryptography and digital signatures
ring = "0.17"
rsa = "0.9"
p256 = "0.13"
ed25519-dalek = "2.0"
x509-cert = "0.2"

# Base64 encoding
base64 = "0.21"

# Async utilities
futures = "0.3"
async-trait = "0.1"

# Image processing (for charts and graphics in filings)
image = "0.24"
plotters = "0.3"
charts = "0.3"

# CSV processing
csv = "1.3"

# Command line interface
clap = { version = "4.4", features = ["derive", "cargo"] }
colored = "2.1"
indicatif = "0.17"

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls", "stream"] }

# DateTime utilities
time = "0.3"

# Monitoring and metrics
prometheus = "0.13"
metrics = "0.22"

# Testing
[dev-dependencies]
tokio-test = "0.4"
mockito = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"
tempfile = "3.8"

[features]
default = ["pdf-generation", "office-docs", "ai-assistance", "digital-signatures"]

# Document format support
pdf-generation = ["printpdf", "lopdf", "wkhtmltopdf"]
office-docs = ["docx-rs", "xlsx_writer", "calamine"]
html-forms = ["scraper", "html2text"]

# AI and ML features
ai-assistance = ["candle-core", "candle-nn", "candle-transformers", "tokenizers"]
nlp-processing = ["nlp", "rust-bert", "whatlang", "lingua"]
onnx-runtime = ["ort"]
pytorch = ["tch"]

# Security features
digital-signatures = ["ring", "rsa", "p256", "ed25519-dalek", "x509-cert"]
encryption = ["ring"]

# Template engines
handlebars-templates = ["handlebars"]
tera-templates = ["tera"]
jinja-templates = ["minijinja"]
liquid-templates = ["liquid"]

# Regulatory jurisdictions
us-filings = []
eu-filings = []
uk-filings = []
canada-filings = []
australia-filings = []
global-filings = []

# Compliance frameworks
sox-filings = []
gdpr-filings = []
hipaa-filings = []
pci-filings = []
iso-filings = []

# Industry specific
financial-filings = []
healthcare-filings = []
manufacturing-filings = []
technology-filings = []

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
debug = true
opt-level = 0

[[bench]]
name = "filing_generation_benchmarks"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]