[package]
name = "aion-multilingual"
version = "1.0.0"
edition = "2021"
authors = ["AION-CR Team <team@aion-cr.enterprise.com>"]
description = "AION-CR Multilingual Support - Comprehensive localization and translation system for global compliance"
license = "MIT"
repository = "https://github.com/aion-cr/multilingual"
keywords = ["i18n", "l10n", "translation", "localization", "multilingual"]
categories = ["internationalization", "localization", "text-processing"]

[lib]
name = "aion_multilingual"
path = "src/lib.rs"

[[bin]]
name = "aion-translation-server"
path = "src/bin/server.rs"

[[bin]]
name = "aion-translation-cli"
path = "src/bin/cli.rs"

[dependencies]
# Core async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["json", "headers", "query"] }
tower = { version = "0.4", features = ["timeout", "limit", "buffer"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling and utilities
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.6", features = ["v4", "fast-rng"] }
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Internationalization and localization
fluent = "0.16"
fluent-bundle = "0.15"
fluent-syntax = "0.11"
intl-memoizer = "0.5"
unic-langid = { version = "0.9", features = ["serde"] }

# Language detection
whatlang = "0.16"
lingua = "1.6"
cld2 = "1.0"

# Text processing and Unicode
unicode-normalization = "0.1"
unicode-segmentation = "1.10"
unicode-bidi = "0.3"
unicode-width = "0.1"
regex = "1.10"

# Translation services
google-translate = "0.4"
azure-cognitiveservices-translator = "0.2"
aws-translate = "0.3"

# Machine translation
candle-core = "0.4"
candle-nn = "0.4"
candle-transformers = "0.4"
tokenizers = "0.15"

# Database for translations
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }
redis = { version = "0.24", features = ["tokio-comp"] }

# File handling
walkdir = "2.4"
glob = "0.3"
csv = "1.3"

# Template engines for localized content
handlebars = "5.1"
tera = "1.19"
minijinja = "1.0"

# Configuration
config = "0.14"
dotenvy = "0.15"

# HTTP client for translation APIs
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Async utilities
futures = "0.3"
async-trait = "0.1"

# Data structures
dashmap = "5.5"
indexmap = "2.1"

# CLI utilities
clap = { version = "4.4", features = ["derive", "cargo"] }
colored = "2.1"
indicatif = "0.17"

# Fonts and text rendering for different scripts
fontdb = "0.15"
rustybuzz = "0.10"

# Number and date formatting
icu = "1.4"
icu_locid = "1.4"
icu_datetime = "1.4"
icu_decimal = "1.4"
icu_plurals = "1.4"

# Currency formatting
rust_decimal = "1.33"

# Testing
[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.8"

[features]
default = ["fluent-templates", "cloud-translation", "ml-translation", "icu-formatting"]

# Template engine support
fluent-templates = ["fluent", "fluent-bundle"]
handlebars-templates = ["handlebars"]
tera-templates = ["tera"]
jinja-templates = ["minijinja"]

# Translation service providers
cloud-translation = ["google-translate", "azure-cognitiveservices-translator", "aws-translate"]
ml-translation = ["candle-core", "candle-nn", "candle-transformers"]

# Language detection
language-detection = ["whatlang", "lingua", "cld2"]

# Formatting and localization
icu-formatting = ["icu", "icu_locid", "icu_datetime", "icu_decimal", "icu_plurals"]
currency-formatting = ["rust_decimal"]
font-support = ["fontdb", "rustybuzz"]

# Supported language families
latin-scripts = []
cyrillic-scripts = []
arabic-scripts = []
cjk-scripts = []
indic-scripts = []
thai-scripts = []
african-scripts = []

# Regulatory jurisdiction support
us-localization = []
eu-localization = []
uk-localization = []
canada-localization = []
australia-localization = []
japan-localization = []
china-localization = []
india-localization = []
brazil-localization = []
mexico-localization = []
russia-localization = []
south-africa-localization = []

# Compliance framework localization
gdpr-localization = []
sox-localization = []
hipaa-localization = []
pci-localization = []
iso-localization = []
basel-localization = []

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
debug = true
opt-level = 0

[[bench]]
name = "translation_benchmarks"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]