[package]
name = "aion-normative"
version = "1.0.0"
edition = "2021"
description = "Normative framework and conflict resolution engine for AION-CR"

[dependencies]
aion-core = { path = "../aion-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
tracing = "0.1"
petgraph = "0.6"
priority-queue = "1.0"
regex = "1.0"