[package]
name = "aion-api-marketplace"
version = "1.0.0"
edition = "2021"
authors = ["AION-CR Team <team@aion-cr.enterprise.com>"]
description = "AION-CR API Marketplace - Comprehensive connector ecosystem for external regulatory data sources"
license = "MIT"
repository = "https://github.com/aion-cr/api-marketplace"
keywords = ["api", "marketplace", "regulatory", "compliance", "connectors"]
categories = ["api-bindings", "web-programming", "authentication"]

[lib]
name = "aion_api_marketplace"
path = "src/lib.rs"

[[bin]]
name = "aion-marketplace-server"
path = "src/bin/server.rs"

[[bin]]
name = "aion-marketplace-cli"
path = "src/bin/cli.rs"

[dependencies]
# Core async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }

# Web framework and HTTP
axum = { version = "0.7", features = ["json", "headers", "query", "multipart", "ws"] }
tower = { version = "0.4", features = ["timeout", "limit", "buffer", "retry"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip", "auth"] }
hyper = { version = "1.1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls", "stream", "multipart"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Error handling and utilities
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.6", features = ["v4", "fast-rng", "macro-diagnostics"] }
chrono = { version = "0.4", features = ["serde"] }

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.22"

# Database and caching
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager", "cluster"] }

# Authentication and security
jsonwebtoken = "9.2"
bcrypt = "0.15"
oauth2 = "4.4"
openidconnect = "3.4"

# Rate limiting and circuit breaking
governor = "0.6"
circuit-breaker = "0.1"

# API documentation
utoipa = { version = "4.2", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "6.0", features = ["axum"] }

# Configuration
config = "0.14"
dotenvy = "0.15"

# GraphQL support
async-graphql = { version = "7.0", features = ["uuid", "chrono", "dataloader"] }
async-graphql-axum = "7.0"

# Message queues
lapin = "2.3"
rdkafka = "0.36"

# Webhook support
webhook = "4.2"
hmac = "0.12"
sha2 = "0.10"

# XML and data format parsing
quick-xml = { version = "0.31", features = ["serialize"] }
csv = "1.3"
roxmltree = "0.19"

# Regular expressions
regex = "1.10"

# Metrics and monitoring
prometheus = "0.13"
metrics = "0.22"
metrics-exporter-prometheus = "0.13"

# OpenAPI and API specs
openapi-generator = "1.0"
swagger = "6.3"

# SDK generation
codegen = "0.2"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

# Templating
handlebars = "5.1"
tera = "1.19"

# Validation
validator = { version = "0.17", features = ["derive"] }

# File handling
tempfile = "3.8"
tar = "0.4"
zip = "0.6"

# Networking utilities
url = "2.5"
http = "1.0"
headers = "0.4"

# Async utilities
futures = "0.3"
async-trait = "0.1"
stream-cancel = "0.8"

# Encryption
ring = "0.17"
base64 = "0.21"

# Data structures
dashmap = "5.5"
indexmap = "2.1"

# CLI utilities
clap = { version = "4.4", features = ["derive", "cargo"] }
indicatif = "0.17"
console = "0.15"

# Testing utilities
[dev-dependencies]
tokio-test = "0.4"
mockito = "1.4"
wiremock = "0.6"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"

[features]
default = ["government-apis", "financial-apis", "healthcare-apis", "enterprise-apis"]

# Government regulatory APIs
government-apis = []

# Financial services APIs
financial-apis = []

# Healthcare regulatory APIs
healthcare-apis = []

# Enterprise system APIs
enterprise-apis = []

# Development and testing features
testing = ["mockito", "wiremock"]
benchmarks = ["criterion"]

# API categories
sec-edgar = []
federal-register = []
eur-lex = []
uk-legislation = []
canada-gazette = []
australia-legislation = []
finra-apis = []
cftc-apis = []
fda-apis = []
ema-apis = []
basel-committee = []
iso-standards = []
gdpr-authorities = []
sox-compliance = []
pci-standards = []

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
debug = true
opt-level = 0

[[bench]]
name = "api_benchmarks"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]